My second website commit. The begining of greatness

--- a/about.Rmd
+++ b/about.Rmd
@@ -11,6 +11,8 @@ __Pronouns: he/him/his__
 - __Occupation:__ Undergraduate Neuroscience student and microbiology research assistant at Amherst College
 - __Research Interests:__ Microbiomes, fungal genomics, symbiosis, neuromodulation
 - __Hobbies:__ Photography, Hiking, Travel
+- __Links:__ 
+  - [Photography Website](www.skylersung.com)
 
 
 
