--- a/index.Rmd
+++ b/index.Rmd
@@ -8,7 +8,7 @@ $$Y = \alpha \cdot \sin(X), \alpha = 0,0.1,0.2,...,3$$
 
 
 ```{r, echo = FALSE, fig.align='center'}
-install.packages("tidyverse")
+#install.packages("tidyverse")
 library(tidyverse)
 cool_function <- function(x, alpha) return(sin(alpha*x))
 xs <- seq(0, pi*1.5, 0.005)
