--- a/about.Rmd
+++ b/about.Rmd
@@ -12,7 +12,7 @@ __Pronouns: he/him/his__
 - __Research Interests:__ Microbiomes, fungal genomics, symbiosis, neuromodulation
 - __Hobbies:__ Photography, Hiking, Travel
 - __Links:__ 
-  - [Photography Website](www.skylersung.com)
+  - [Photography Website](https://www.skylersung.com/)
 
 
 
