My second website commit. The begining of greatness

--- a/about.Rmd
+++ b/about.Rmd
@@ -10,12 +10,12 @@ __Pronouns: he/him/his__
 
 - __Occupation:__ Undergraduate Neuroscience student and research assistant in the [Purdy Microbiology Lab](http://www.apurdylab.org/)! at Amherst College
 - __Research Interests:__ Microbiomes, fungal genomics, symbiosis, neuromodulation
-- __Past Labs: 
+- __Past Labs:__ 
   - [Margaret McFall-Ngai & Ned Ruby, University of Hawaii](https://www.glowingsquid.org/index.php)!
   - [Julie Segre, National Human Genome Research Institution](https://www.genome.gov/staff/Julie-Segre-PhD)!
 - __Hobbies:__ Photography, Hiking, Traveling 
 - __Links:__ 
-  - [Photography Website](https://www.skylersung.com/)!
+  - [Photography Website](https://www.skylersung.com/)
 
 
 
