--- a/projects.Rmd
+++ b/projects.Rmd
@@ -3,7 +3,6 @@ title: "Projects"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
+__Projects__
 
+- __Fungal Annotation Pipeline:__ 
